--- a/config/locales/model/errors.ru.yml
+++ b/config/locales/model/errors.ru.yml
@@ -4,7 +4,7 @@ ru:
       user:
         name:
           blank: 'Укажите имя'
-          format: 'Имя должно иметь только заглавные или строчные буквы'
+          format: 'Укажите имя, используя буквы, цифры или символ подчёркивания'
         email:
           blank: 'Укажите email'
           unique: 'Данный email уже существует'
@@ -12,7 +12,7 @@ ru:
         city:
           blank: 'Укажите город'
         password:
-          blank: 'Задайте пароль'
+          blank: 'Укажите пароль'
       user_session:
         uuid:
-          blank: 'Укажите уникальный идентификатор'
+          blank: 'Отсутствует uuid'
